Use modern Maven version if modern Java is discovered.